Fix legend spacing (HDS-2948) (#1856)

--- a/packages/components/app/styles/components/form/group.scss
+++ b/packages/components/app/styles/components/form/group.scss
@@ -15,7 +15,7 @@
 }
 
 .hds-form-group__legend { // notice: this is a <legend> element
-  margin: 0 0 4px 0;
+  margin: 0 0 8px 0;
   padding: 0;
 }
 
